syntax = "proto2";
import "proto/common/Coupon.proto";
package message.order;
message getNewUserCouponResponse {
    repeated message.common.Coupon coupon_list = 1; //可使用优惠券列表
    optional string discount_total = 2; //总优惠金额
}